--- a/src/Css/ChatBox.css
+++ b/src/Css/ChatBox.css
@@ -9,11 +9,61 @@
   border-radius: 50% !important;
   padding: 15px;
 }
+.chatbutton:focus,
+.closebutton:focus,
+.submitmessage:focus {
+  outline: none;
+}
+.chatwindow {
+  color: rgb(48, 182, 115);
+  position: fixed;
+  top: 15%;
+  left: 74%;
+  background-color: #1e2c4c;
+  border-radius: 20px;
+  width: 25%;
+}
+.chats {
+  background-color: white;
+}
+.chattingarea {
+  width: 100%;
+  height: 200px;
+  background-color: #f0f8fb;
+}
+.chatinput {
+  width: 100% !important;
+  display: inline !important;
+}
+input:focus {
+  outline: none !important;
+}
+input.message:focus {
+  outline-width: 0%;
+  outline: none;
+}
+.message {
+  display: initial !important;
+  border: none !important;
+  border-radius: 0% !important;
+  width: 100%;
+}
+.submitmessage {
+  position: absolute;
+  top: 94%;
+  left: 67%;
+  float: right;
+}
 
 @media only screen and (max-width: 800px) {
   .chatbox {
     position: fixed;
     left: 80%;
     top: 90%;
+  }
+  .chatwindow {
+    position: fixed;
+    left: 0%;
+    width: 100%;
   }
 }
